--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node ./dist/main.js",
+    "start": "node ./dist/src/main.js",
     "dev": "nodemon --config nodemon.json ",
-    "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix",
     "build": "tsc",
-    "generate": "prisma generate",
     "test": "jest",
     "test:e2e": "jest --config jest.e2e.config.ts --coverage"
   },
